feat: CRUD de competências do candidato